refactor: add fetch POST historico

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="index.html">Início</a>
+            <a href="historico.html" target="_blank">Histórico</a>
+        </nav>
+    </header>
+
     <h1>Laboratório de Informática - Gerenciamento de presença</h1>
 
     <section id="banner">
